--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Soni_Piyush_113273375_Lab2_Task1_2.zip
 Soni_Piyush_113273375_Lab3.zip
 Soni_Piyush_113273375_Lab3/hand16.uvf
 Soni_Piyush_113273375_Lab3/head512.uvf
+final_project/src/test.py
