--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ Soni_Piyush_113273375_Lab3.zip
 Soni_Piyush_113273375_Lab3/hand16.uvf
 Soni_Piyush_113273375_Lab3/head512.uvf
 final_project/src/test.py
+final_project/../.DS_Store
+final_project/.DS_Store
+final_project/.ipynb_checkpoints/
+final_project/data_preprocess.ipynb
