adding covid attributes

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ final_project/.ipynb_checkpoints/
 final_project/data_preprocess.ipynb
 final_project/src/data/hashtags
 final_project/src/data/full_dataset-clean.tsv
+final_project/.ipynb_checkpoints/data_preprocess-checkpoint.ipynb
+final_project/src/data/.ipynb_checkpoints/bubble_npi-checkpoint.csv
+final_project/data_preprocess.ipynb
